Sat, 11 Nov 2006 01:12:24 +0100 Dodji Seketeli

	* gtksourceview/src/sourcelanguagesmanager.hg: updated API doc

Sat, 11 Nov 2006 00:57:00 +0100 Dodji Seketeli

	* gtksourceview/src/sourcelanguage.hg: updated API doc.

Wed, 08 Nov 2006 23:36:20 +0100 Dodji Seketeli

	* docs/reference/Doxyfile.in: don't generate full path doc names.
	* tools/m4/convert_gtksourceviewmm.m4: add  more need type conversion macros.
	* gtksourceview/src/sourcelanguagesmanager.hg: fix typo:
	  SourceLanguagesManager::get_available_languages(), instead of
	  ::get_available_language(). This breaks API, but it's for the good.
	* gtksourceview/src/sourcebuffer.hg: make api doc complete for this
	  class.
	* gtksourceview/src/sourcetag.hg: complete apidoc for this class.
	* gtksourceview/src/sourcetagtable.hg: went forward in apidoc.
	* tests/Makefile.am, test-langs.cc: added a new test to test languages.
	* configure.ac: bump revision number, and soname stuff because of api
	  break.

Thu, 02 Nov 2006 08:14:03 +0100 Dodji Seketeli

	* configure.in: renamed this into configure.ac .
	* docs/reference: added this new directory. Now, make also builds
	  reference documentation in docs/reference/html
	* docs/reference/Doxyfile.in: added this new file.
	* gtksourceview/src/sourcebuffer.hg: started to document this.
	* gtksourceview/src/sourcetag.hg: started to document this.

========== release 0.2.0 ===========

lundi 18 septembre 2006, 12:45:45 (UTC+0200) Dodji Seketeli

	* gtksourceview/src/sourcebuffer.hg, gtksourceview/src/sourceview.hg:
	added a default 'true' parameter to the set_* methods that takes a boolean
	in parameter.

dimanche 17 septembre 2006, 14:52:01 (UTC+0200) Dodji Seketeli

	* configure.in:  updated version number to 0.2.0 and soversion to
	1.0.1.

2006-09-17  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/src/sourcelanguage.hg: Added a create() method, 
	so that instances of this class can be instantiated. Removed the 
	unnecessary friend statement.