@@ -22,6 +22,8 @@
  * License along with this library; if not, write to the Free
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
+/// \file
+/// \brief the library initialization routines
 namespace gtksourceview
 {
     void init () ;
