@@ -18,7 +18,8 @@
  * License along with this library; if not, write to the Free
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
-
+/// \file
+/// \brief the SourceMarker class
 #include <gtksourceview/gtksourcebuffer.h>
 #include <gtksourceview/gtksourcemarker.h>
 #include <gtkmm/textmark.h>
